get enrollment student and major by activityId
