# docs/swagger.json
@@ -301,6 +301,47 @@
                 }
             }
         },
+        "/activitys/{id}/enrollments": {
+            "get": {
+                "description": "Get enrollment by activity ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "activitys"
+                ],
+                "summary": "Get enrollment by activity ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Activity ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ActivityDto"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/admins": {
             "get": {
                 "description": "Get admins with pagination, search, and sorting",
@@ -746,6 +787,12 @@
                     "type": "string",
                     "example": "image.jpg"
                 },
+                "foodVotes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.FoodVote"
+                    }
+                },
                 "id": {
                     "type": "string"
                 },
@@ -812,8 +859,7 @@
                     }
                 },
                 "name": {
-                    "type": "string",
-                    "example": "Football Tournament"
+                    "type": "string"
                 },
                 "skill": {
                     "type": "string",
@@ -832,8 +878,7 @@
                     ]
                 },
                 "type": {
-                    "type": "string",
-                    "example": "one"
+                    "type": "string"
                 }
             }
         },
@@ -967,6 +1012,23 @@
                 }
             }
         },
+        "models.FoodVote": {
+            "type": "object",
+            "properties": {
+                "activityID": {
+                    "type": "string"
+                },
+                "foodID": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "score": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Major": {
             "type": "object",
             "properties": {
@@ -992,6 +1054,9 @@
                 },
                 "id": {
                     "type": "string"
+                },
+                "major": {
+                    "$ref": "#/definitions/models.Major"
                 },
                 "majorId": {
                     "type": "string"
